--- a/src/app/calendar.component.html
+++ b/src/app/calendar.component.html
@@ -1,23 +1,20 @@
-
-<section [(ngModel)]="calendar">
-
 <form (ngSubmit)="saveCalendarDetails()" #calendarForm="ngForm">
   
   <div>
     <label>Name: </label>
-    <input type="text" name="calendarName" [(ngModel)]="calendar.calendarName" #calendarName="ngModel">
+    <input type="text" name="calendarName" [(ngModel)]="calendar.calendarName">
   </div>
   
   <div>
     <label>Username: </label>
-    <input type="text" name="username" [(ngModel)]="calendar.username" #username="ngModel">  
+    <input type="text" name="username" [(ngModel)]="calendar.username"> 
+    {{calendar.username}} 
   </div>
   
   <div>
     <label>External ID: </label>
-    <input type="text" name="externalId">
+    <input type="text" name="externalId" [(ngModel)]="calendar.externalId">
   </div>
 
   <button type="submit">Save</button>
 </form>
-</section>
